fixed controls z-index

--- a/frontEnd/userControls.css
+++ b/frontEnd/userControls.css
@@ -5,13 +5,14 @@
 	float: left;
 	margin-left: 1%;
 	margin-right: 1%;
+	z-index: 50;
 }
 
 .left-block {
 	background-color: rgba(42, 54, 186, 0.7);
 	position: relative;
 	display: block;
-	height: 742px;
+	height: 750px;
 	width: 100%;
 	margin-left: 0%;
 	border-width: 5px;
@@ -33,7 +34,7 @@
 	width: 48%;
 	padding: 1%;
 	float: left;
-	z-index: 1;
+	z-index: 100;
 }
 
 .columnRight {
